# foxflow

./: LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
examples/: 01_quickstart.ipynb
src/foxflow/: reader.py  registry.py
src/foxflow/parsers/: __init__.py  generic.py
src/foxflow/parsers/ackermann_msgs/: ackermann_drive.py
src/foxflow/parsers/geometry_msgs/: pose.py  transform_stamped.py
src/foxflow/parsers/nav_msgs/: path.py
src/foxflow/parsers/sensor_msgs/: image.py  imu.py  joy.py  laser_scan.py  magnetic_field.py  nav_sat_fix.py  pointcloud2.py
src/foxflow/parsers/std_msgs/: arrays.py  scalars.py
src/foxflow/parsers/tf2_msgs/: tf_message.py
src/foxflow/parsers/vision_msgs/: bounding_box.py  detection2d.py  label_info.py
src/foxflow/utils/: __init__.py  events.py  images.py  paths.py  sync.py  time.py
