[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foxflow"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "numpy",
  "tqdm",
  "requests",
  "foxglove-data-platform",
  "mcap-protobuf-support",
  "mcap-ros2-support",
  "mcap-ros1-support",
  "duckdb",
  "opencv-python-headless"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "black",
  "isort",
  "python-dotenv",
  "ipykernel",
  "jupyter",
  "notebook",
  "plotly",
]

[tool.setuptools]
package-dir = {"" = "src"}
