[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foxflow"
version = "0.1.0"
requires-python = ">=3.10"
description = "Interactive Python tools for importing Foxglove Cloud recordings into Jupyter and Colab."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "William Engel" }]
dependencies = [
  "pandas",
  "numpy",
  "tqdm",
  "requests",
  "foxglove-client",
  "mcap-protobuf-support",
  "mcap-ros2-support",
  "mcap-ros1-support",
  "duckdb",
  "opencv-python-headless",
  "pyarrow"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "black",
  "isort",
  "python-dotenv",
  "ipykernel",
  "jupyter",
  "notebook",
  "plotly",
  "twine"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/william-mx/foxflow"
